--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New User</h1>
 
-<form action="/users" method="POST">
+<%# <form action="/users" method="POST">
   <label for="user[username]">Username:</label><br>
   <input type="text" id="username" name="user[username]"><br>
   <label for="user[email]">Email:</label><br>
@@ -8,5 +8,15 @@
   <label for="user[password]">Password:</label><br>
   <input type="password" id="password" name="user[password]"><br>
   <br><input type="submit" value="Submit">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-</form>
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token "> <--------- add what is missing again>
+</form> %>
+
+<%= form_tag("/users", method: "post") do %><br>
+<%= label_tag(:username, "Username:") %><br>
+<%= text_field_tag(:username) %><br>
+<%= label_tag(:email, "Email:") %><br>
+<%= email_field_tag(:email) %><br>
+<%= label_tag(:password, "Password:") %><br>
+<%= password_field_tag(:password) %><br>
+<br><%= submit_tag("Submit") %>
+<% end %>
