--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,12 +11,22 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token "> <--------- add what is missing again>
 </form> %>
 
-<%= form_tag("/users", method: "post") do %><br>
-<%= label_tag(:username, "Username:") %><br>
-<%= text_field_tag(:username) %><br>
-<%= label_tag(:email, "Email:") %><br>
-<%= email_field_tag(:email) %><br>
-<%= label_tag(:password, "Password:") %><br>
-<%= password_field_tag(:password) %><br>
-<br><%= submit_tag("Submit") %>
+<% if false %>
+  <%= form_tag("/users", method: "post") do %><br>
+    <%= label_tag(:username, "Username:") %><br>
+    <%= text_field_tag(:username) %><br>
+    <%= label_tag(:email, "Email:") %><br>
+    <%= email_field_tag(:email) %><br>
+    <%= label_tag(:password, "Password:") %><br>
+    <%= password_field_tag(:password) %><br>
+    <br><%= submit_tag("Submit") %>
+  <% end %>
+<% end %>
+
+
+<%= form_for :user, url: users_path do |u| %>
+  Enter Username: <%= u.text_field :username, value: 'Username' %><br>
+  Email: <%= u.email_field :email, placeholder: 'name@provider.com' %><br>
+  Password: <%= u.password_field :password, placeholder: 'strong password' %><br>
+  <%= u.submit value: 'Submit' %>
 <% end %>
