--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,8 +25,8 @@
 
 
 <%= form_for :user, url: users_path do |u| %>
-  Enter Username: <%= u.text_field :username, value: 'Username' %><br>
-  Email: <%= u.email_field :email, placeholder: 'name@provider.com' %><br>
-  Password: <%= u.password_field :password, placeholder: 'strong password' %><br>
+  Enter Username: <br> <%= u.text_field :username, value: 'Username' %><br>
+  Email: <br><%= u.email_field :email, placeholder: 'name@provider.com' %><br>
+  Password: <br><%= u.password_field :password, placeholder: 'strong password' %><br>
   <%= u.submit value: 'Submit' %>
 <% end %>
